--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="Vector.js"></script>
     <script src="Moveable.js"></script>
+    <script src="Menu.js"></script>
     <script src="Ice.js"></script>
     <script src="Customer.js"></script>
     <script src="main.js"></script>
@@ -31,19 +32,19 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       <select id="sauces">
         <option>sauces</option>
       </select>
-      <select id="sauces">
+      <select id="toppings">
         <option>toppings</option>
       </select>
       <input id="prize" type="number" placeholder="prize">
       <button id="create">create</button>
-      <div id="menuelement">
+  <!--     <div id="menuelement">
           <h3>FIREBOMB </h3>
           <p id="price">666€</p>
           <p>WAFFLE
           <br>LAVA 3
           <br>CHOCLATE
           <br>COAL</p>
-      </div>
+      </div> -->
     </div>
     <br>
     <canvas width="1000" height="600" id="sim">    
