--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         <option>Materie</option>
         <option>Luft</option>
       </select>
-      <input id="numberOfBalls" type="number" placeholder="number of Balls">
+      <input id="numberOfBalls" type="number" min="1" max="3" placeholder="Number of Balls">
       <select id="sauces">
         <option value="Starburst">Starburst</option>
         <option value="Schoki">Schoki</option>
@@ -58,12 +58,13 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
           <br>CHOCLATE
           <br>COAL</p>
       </div> -->
+   
     </div>
     <br>
     <canvas width="1000" height="600" id="sim">    
     </canvas>
   </div>
-  <img src="Sid-ice-age.png">
+  <img id="sid" src="Sid-ice-age.png">
 </body>
 <footer>
   
